--- a/app/Resources/views/cms/index.html.twig
+++ b/app/Resources/views/cms/index.html.twig
@@ -2,30 +2,6 @@
 
 {% block body %}
 
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Image</th>
-                <th>Movie</th>
-                <th>Year</th>
-                <th>Description</th>
-                <th>Action</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for movie in movies %}
-                <tr>
-                    <td>{{ movie.name }}</td>
-                    <td>{{ movie.name }}</td>
-                    <td>{{ movie.year }}</td>
-                    <td>{{ movie.description }}</td>
-                    <td>
-                        <a href="/cms/movie/edit/{{ movie.id}}" class="btn btn-primary">Edit</a>
-                        <a href="/cms/movie/delete/{{ movie.id}}" class="btn btn-danger">Delete</a>
-                    </td>
-                </tr>
-            {% endfor %}
-        </tbody>
-    </table>
+    <h1>Welcome to Movie database</h1>
 
 {% endblock %}
