Editing functionality added (movies/persons)

--- a/app/Resources/views/cms/index.html.twig
+++ b/app/Resources/views/cms/index.html.twig
@@ -2,6 +2,9 @@
 
 {% block body %}
 
-    <h1>Welcome to Movie database</h1>
+    <div class="container text-center">
+        <h1>Welcome to Movie database</h1>
+    </div>
+
 
 {% endblock %}
