--- a/app/Resources/views/cms/person/edit.html.twig
+++ b/app/Resources/views/cms/person/edit.html.twig
@@ -2,6 +2,16 @@
 
 {% block body %}
 
-    editperson
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <h1>Edit person</h1>
+                {{ form_start(personForm) }}
+                    {{ form_widget(personForm) }}
+                    <button type="submit" class="btn btn-primary">Save</button>
+                {{ form_end(personForm) }}
+            </div>
+        </div>
+    </div>
 
 {% endblock %}
