required fields fixed, multiple entity problems

--- a/app/Resources/views/cms/movie/list.html.twig
+++ b/app/Resources/views/cms/movie/list.html.twig
@@ -7,7 +7,7 @@
         <table class="table">
             <thead>
             <tr>
-                <th>Image</th>
+                <!--<th>Image</th> -->
                 <th>Movie</th>
                 <th>Year</th>
                 <th>Description</th>
@@ -18,7 +18,7 @@
             <tbody>
             {% for movie in movies %}
                 <tr>
-                    <td>{{ movie.imagePath }}</td>
+                    <!--<td>{//{ movie.imagePath }}</td> -->
                     <td>{{ movie.name }}</td>
                     <td>{{ movie.year }}</td>
                     <td>{{ movie.description }}</td>
