--- a/app/Resources/views/cms/movie/crew.html.twig
+++ b/app/Resources/views/cms/movie/crew.html.twig
@@ -6,10 +6,10 @@
         <div class="row">
             <div class="col">
                 <h1>Add movie</h1>
-                {{ form_start(movieRoleForm) }}
-                    {{ form_widget(movieRoleForm) }}
+                {{  form_start(MoviePersonForm) }}
+                    {{ form_widget(MoviePersonForm) }}
                     <button type="submit" class="btn btn-primary" formnovalidate>Add</button>
-                {{ form_end(movieRoleForm) }}
+                {{ form_end(MoviePersonForm) }}
             </div>
         </div>
     </div>
