--- a/app/Resources/views/cms/movie/list.html.twig
+++ b/app/Resources/views/cms/movie/list.html.twig
@@ -3,7 +3,15 @@
 {% block body %}
 
     <div class="container">
-        <h2>List of movies</h2>
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="">
+                    <a class="btn btn-outline-info pull-right" href="{{ path('cms_create_movie')}}">Add new movie</a>
+                </div>
+                <h2>List of movies</h2>
+            </div>
+        </div>
+
         <table class="table">
             <thead>
             <tr>
@@ -11,7 +19,9 @@
                 <th>Movie</th>
                 <th>Year</th>
                 <th>Description</th>
-                <th>Edit</th>
+                <th>View</th>
+                <th>Edit movie</th>
+                <th>Add cast & crew</th>
                 <th>Delete</th>
             </tr>
             </thead>
@@ -26,7 +36,10 @@
                         <a href="{{ path('cms_show_movie', {'id': movie.id}) }}" class="btn btn-success">View</a>
                     </td>
                     <td>
-                        <a href="{{ path('cms_edit_movie', {'id': movie.id}) }}" class="btn btn-primary">Edit</a>
+                        <a href="{{ path('cms_edit_movie', {'id': movie.id}) }}" class="btn btn-info">Edit</a>
+                    </td>
+                    <td>
+                        <a href="{{ path('cms_add_crew_movie', {'id': movie.id}) }}" class="btn btn-warning">Add</a>
                     </td>
                     <td>
                         <a href="{{ path('cms_delete_movie', {'id': movie.id}) }}" class="btn btn-danger">Delete</a>
