--- a/app/Resources/views/cms/movie/show.html.twig
+++ b/app/Resources/views/cms/movie/show.html.twig
@@ -3,7 +3,18 @@
 {% block body %}
 
     <div class="container">
-        <h2>{{ movie.name }}</h2>
+        <h2>{{ movie.name }} ({{ movie.year }})</h2>
+
+        <p>Description: {{ movie.description }}</p>
+        <p>Director(s):
+            <ul>
+                {% for person in persons %}
+                <li>{{ person.name }}</li>
+                {% endfor %}
+            </ul>
+        </p>
+        <p>Writer(s): </p>
+        <p>Actors: </p>
     </div>
 
 
