--- a/app/Resources/views/cms_base.html.twig
+++ b/app/Resources/views/cms_base.html.twig
@@ -57,13 +57,7 @@
                 </ul>
             </li>
         </ul>
-        <ul class="navbar-nav sidenav-toggler">
-            <li class="nav-item">
-                <a class="nav-link text-center" id="sidenavToggler">
-                    <i class="fa fa-fw fa-angle-left"></i>
-                </a>
-            </li>
-        </ul>
+
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
             	<a href="/" style="text-decoration:none;color:#fff;">
@@ -76,19 +70,26 @@
     </div>
 </nav>
 <div class="content-wrapper">
-    {% for msg in app.session.flashBag.get('success') %}
-        <div class="alert alert-success">
-            {{ msg }}
-        </div>
-    {% endfor %}
-    {% block body %}{% endblock %}
+    <div class="container">
+        {% for msg in app.session.flashBag.get('success') %}
+            <div class="alert alert-success">
+                {{ msg }}
+            </div>
+        {% endfor %}
+        {% for msg in app.session.flashBag.get('warning') %}
+            <div class="alert alert-warning">
+                {{ msg }}
+            </div>
+        {% endfor %}
+        {% block body %}{% endblock %}
+    </div>
 </div>
     <!-- /.container-fluid-->
     <!-- /.content-wrapper-->
     <footer class="sticky-footer">
         <div class="container">
             <div class="text-center">
-                <small>Copyright © Your Website 2017</small>
+                <small>Netgen challenge</small>
             </div>
         </div>
     </footer>
