--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -4,10 +4,41 @@
     <br><br><br><br>
     <div class="container">
         <div class="pagerfanta">
-            {% for item in my_pager.currentPageResults %}
-                <ul>
-                    <li>{{ dump(item) }}</li>
-                </ul>
+            {% for movie in my_pager.currentPageResults %}
+                <div class="col-lg-12" style="border: 1px dashed #5eb5e0;margin-bottom: 10px;">
+                    <p><strong>Name:</strong> {{ movie.name }}</p>
+                    <p><strong>Description:</strong> {{ movie.description }}</p>
+                    <strong>Cast:</strong>
+                    <ul>
+                        <li><em>Actors</em>:
+                            <ul>
+                                {% for role in roles %}
+                                    {% if role.movie.id == loop.parent.movie.id and role.getname == "actor" %}
+                                        <li>{{ role.person.getname }}</li>
+                                    {% endif %}
+                                {% endfor %}
+                            </ul>
+                        </li>
+                        <li><em>Writer(s)</em>:
+                            <ul>
+                                {% for role in roles %}
+                                    {% if role.movie.id == loop.parent.movie.id and role.getname == "writer" %}
+                                        <li>{{ role.person.getname }}</li>
+                                    {% endif %}
+                                {% endfor %}
+                            </ul>
+                        </li>
+                        <li><em>Director(s</em>):
+                            <ul>
+                                {% for role in roles %}
+                                    {% if role.movie.id == loop.parent.movie.id and role.getname == "director" %}
+                                        <li>{{ role.person.getname }}</li>
+                                    {% endif %}
+                                {% endfor %}
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
             {% endfor %}
 
             <div class="pager text-center">
