Adding person for the movie cast - working

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -26,6 +26,12 @@
         </div>
     {% block body %}{% endblock %}
 
+        <footer>
+            <div class="container text-center" style="margin-top: 50px;">
+                Netgen Challenge &copy; 2017.
+            </div>
+        </footer>
+
         <!-- Bootstrap core JavaScript-->
         <script src="{{ asset('vendor/jquery/jquery.min.js')}}"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
