--- a/web/css/style.css
+++ b/web/css/style.css
@@ -17,3 +17,13 @@ movie{
     float: left;
     padding: 2px 5px;
 }
+
+.introimg{
+    opacity: 0.7;
+    filter: alpha(opacity=70); /* For IE8 and earlier */
+}
+
+.introimg:hover{
+    opacity: 1.0;
+    filter: alpha(opacity=100); /* For IE8 and earlier */
+}
