Adding/changing photo for movie is working

--- a/app/Resources/views/cms/movie/edit.html.twig
+++ b/app/Resources/views/cms/movie/edit.html.twig
@@ -8,8 +8,14 @@
                 <h1>Edit movie</h1>
                 {{ form_start(movieForm) }}
                     {{ form_widget(movieForm) }}
-                    <button type="submit" class="btn btn-primary">Save</button>
+                    <button type="submit" class="btn btn-lg btn-primary">Save</button>
                 {{ form_end(movieForm) }}
+                {% if movie is not null %}
+                    <div style="max-width:200px;">
+                        Existing photo:
+                        <img src="/uploads/{{ movie }}" alt="" class="img-fluid">
+                    </div>
+                {% endif %}
             </div>
         </div>
     </div>
