--- a/app/Resources/views/cms/index.html.twig
+++ b/app/Resources/views/cms/index.html.twig
@@ -9,7 +9,7 @@
     <div class="row intro" style="margin-top: 20px;">
         {% for movie in movies %}
             {% if movie.imagePath is not null %}
-                <div class="col-md-3">
+                <div class="col-md-3" style="padding-bottom:50px;">
                     <a href="{{ path('cms_show_movie', {'id': movie.id}) }}">
                         <img src="/uploads/{{ movie.imagePath }}" alt="" class="img-fluid introimg">
                     </a>
