--- a/app/Resources/views/cms/person/show.html.twig
+++ b/app/Resources/views/cms/person/show.html.twig
@@ -3,38 +3,53 @@
 {% block body %}
 
     <div class="container">
-        <h2>{{ person.name }}</h2><br>
-        <h4>Appearances:</h4>
+        <div class="row">
+            <div class="col-md-3">
+                {% if person.imagePath is not null %}
+                    <img src="/uploads/{{ person.imagePath }}" alt="" class="img-fluid">
+                {% else %}
+                    <img src="{{ asset('img/no_image.jpg') }}" alt="" class="img-fluid">
+                {% endif %}
+            </div>
+            <div class="col-md-9">
+                <h2>
+                    {{ person.name }}
+                    <a class="btn btn-outline-info" href="{{ path('cms_edit_person', {'id':person.id})}}">Edit</a>
+                </h2>
+                <h4>({{ person.dateOfBirth|date('d. m. Y.')}})</h4><br>
+                <h4>Appearances:</h4>
 
-        {% if a_movies %}
-            <strong>Actor:</strong>
-            <ul>
-                {% for a_movie in a_movies %}
-                    <li>{{ a_movie.getmovie.getname }}</li>
-                {% endfor %}
-            </ul>
-        {% endif %}
-        {% if w_movies %}
-            <strong>Director:</strong>
-            <ul>
-                {% for w_movie in w_movies %}
-                    <li>{{ w_movie.getmovie.getname }}</li>
-                {% endfor %}
-            </ul>
-        {% endif %}
-        {% if d_movies %}
-            <strong>Writer:</strong>
-            <ul>
-                {% for d_movie in d_movies %}
-                    <li>{{ d_movie.getmovie.getname }}</li>
-                {% endfor %}
-            </ul>
-        {% endif %}
+                {% if a_movies %}
+                    <strong>Actor:</strong>
+                    <ul>
+                        {% for a_movie in a_movies %}
+                            <li>{{ a_movie.getmovie.getname }}</li>
+                        {% endfor %}
+                    </ul>
+                {% endif %}
+                {% if w_movies %}
+                    <strong>Director:</strong>
+                    <ul>
+                        {% for w_movie in w_movies %}
+                            <li>{{ w_movie.getmovie.getname }}</li>
+                        {% endfor %}
+                    </ul>
+                {% endif %}
+                {% if d_movies %}
+                    <strong>Writer:</strong>
+                    <ul>
+                        {% for d_movie in d_movies %}
+                            <li>{{ d_movie.getmovie.getname }}</li>
+                        {% endfor %}
+                    </ul>
+                {% endif %}
 
-        <!-- if person's career is empty -->
-        {% if not a_movies and not w_movies and not d_movies %}
-            Apparently, this persons prefers to keep an air of mystery about them. <!-- thanks to SO -->
-        {% endif %}
+                <!-- if person's career is empty -->
+                {% if not a_movies and not w_movies and not d_movies %}
+                    Apparently, this persons prefers to keep an air of mystery about them. <!-- thanks to SO -->
+                {% endif %}
+            </div>
+        </div>
     </div>
 
 
