--- a/app/Resources/views/cms/person/list.html.twig
+++ b/app/Resources/views/cms/person/list.html.twig
@@ -7,10 +7,9 @@
         <table class="table">
             <thead>
             <tr>
-                <!--<th>Image</th> ADD -->
+                <th>#</th>
                 <th>Name</th>
                 <th>Date of birth</th>
-                <!--   <th>Number of (acting, directing etc.)</th> Add !! -->
                 <th>View</th>
                 <th>Edit</th>
                 <th>Delete</th>
@@ -19,10 +18,13 @@
             <tbody>
             {% for person in persons %}
                 <tr>
-                    <!--<td>{//{ person.imagePath }}</td> -->
+                    <td>
+                        {% if person.imagePath %}
+                            <img src="/uploads/{{ person.imagePath }}" alt="" class="img-fluid">
+                        {% endif %}
+                    </td>
                     <td>{{ person.name }}</td>
                     <td>{{ person.dateOfBirth|date('d. m. Y.') }}</td>
-                    <!-- <td>{//{ count... }}</td>  FIX -->
                     <td>
                         <a href="{{ path('cms_show_person', {'id': person.id}) }}" class="btn btn-success">View</a>
                     </td>
